header and footer + fonts

--- a/index.html
+++ b/index.html
@@ -1,41 +1,29 @@
 <!DOCTYPE html>
-
 <html lang="ru">
 
-	<head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Система тестирования</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
-		<meta charset="UTF-8">
+<body>
+    <header>
+        <img class="header__logo" src="img/logo.svg" alt="logo">
+        <nav>
+            <button>На главную</button>
+            <button>Список ответов</button>
+        </nav>
+        <button class="header__logon">Войти</button>
+    </header>
+    <footer>
+        <div class="footer-info">
+            <h2>О нас</h2>
+            <p>Контактные данные: +7(999)123-68-30</p>
+            <p>Email: vam.vam10@mail.ru</p>
+        </div>
+    </footer>
+</body>
 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-		<title>Проектирование интерфейсов</title>
-
-		<link rel="stylesheet" href="css/style.css">
-		
-	</head>
-
-	<body>
-        <nav class="nav-bar">
-            <picture class="logo">
-                <img class="logo-src" src="img/logo.svg">
-            </picture>
-            <div class="nav-bar-btns">
-                <button class="nav-bar-btn">На главную</button>
-                <button class="nav-bar-btn">Список ответов</button>
-            </div>
-            <div class="enter">
-                <button class="enter-btn">Войти</button>
-            </div>
-        </nav> 		
-		<main>
-            content
-        </main>
-        <footer>
-            <div class="footer-info">
-                <h2>О нас</h2>
-                <p>Контактные данные: +7(999)123-68-30</p>
-                <p>Email: vam.vam10@mail.ru</p>
-            </div>
-        </footer>
-	</body>
-</html>  
+</html>
