--- a/test5.html
+++ b/test5.html
@@ -6,17 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Система тестирования</title>
     <link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/test1style.css">
 </head>
 
 <body>
     <header>
-        <img class="header__logo" src="img/logo.svg" alt="logo">
+        <a href="main.html"><img class="header__logo" src="img/logo.svg" alt="logo"></a>
         <nav>
-            <button>На главную</button>
-            <button>Список ответов</button>
+            <form action="main.html">
+                <button>На главную</button>
+            </form>
+            <form action="results.html">
+                <button>Список ответов</button>
+            </form>
         </nav>
-        <button class="header__logon">Войти</button>
+        <form action="auth.html">
+            <button class="header__logon">Войти</button>
+        </form>
     </header>
     <main>
         <div class="about">
