--- a/auth.html
+++ b/auth.html
@@ -28,13 +28,12 @@
     <div class="auth">
       <div class="auth-inf">
         <div class="auth-inf-log">
-
           <p class="auth-inf-p">Логин</p>
-          <input class="input">
+          <input type="text" class="input"required>
         </div>
         <div class="auth-inf-pass">
           <p class="auth-inf-p">Пароль</p>
-          <input class="input">
+          <input type="text" class="input" required>
         </div>
         <div class="auth-but">
           <button class="auth-button">Войти</button>
