--- a/test1.html
+++ b/test1.html
@@ -154,7 +154,7 @@
 								<th>2. Система унифицированных связей, предназначенных для обмена информацией между компонентами вычислительной системы.</th>
 							</tr>
 						</table>
-						 <p id="input1">Ответ:<input type="text" size="2"></p>
+						 <p id="input1">Ответ:<input placeholder="12" class="input-answer" type="text" size="2"></p>
 				</ul>
                 <ul>6. Диалоговые окна предназначены для:
                     <li>
@@ -248,7 +248,7 @@
 			<button class="main__students__button">Отправить</button>
         </div>
     </main>
-    <footer>
+    <footer class="relative">
         <div class="footer-info">
             <h2>О нас</h2>
             <p>Контактные данные: +7(999)123-68-30</p>
