--- a/test5.html
+++ b/test5.html
@@ -230,7 +230,7 @@
 			<button class="main__students__button">Отправить</button>
         </div>
     </main>
-    <footer>
+    <footer class="relative">
         <div class="footer-info">
             <h2>О нас</h2>
             <p>Контактные данные: +7(999)123-68-30</p>
